# Little_Local_World

./: .gitignore  AGENTS.md  BLUEPRINT.md  BOOTSTRAP_CHECKLIST.md  BRANCHING.md  Launch Local Agent Town.cmd  Launch Local Agent Town.ps1  Local_little_world_refactor1.md  README.md  ROADMAP.md  RUNBOOK.md  UNATTENDED_WORK_POLICY.md  VISUAL_DESIGN.md  pyproject.toml  run.ps1  setup.ps1
research_papers/: 1.rimworld_mood-system-report.md  2.rimworld_hunger-system-report.md  3.rimworld_autonomous-pawn-report.md  4.townsmen_economy-loop-report.md  5.aoe_civ-readability-report.md  6.ui-report.md  7.scalable-sim-report.md  8.little-local-world-research-synthesis.md
scripts/: analyze_run.py  benchmark_scale.py  benchmark_scaling.py  llm_governor_run.py  prepare-kenney-assets.ps1  validate-workbench.ps1
tests/: test_analyzer_honesty.py  test_app.py  test_architecture_contracts.py  test_assets.py  test_benchmarks.py  test_buildings.py  test_civ_stats.py  test_civilization.py  test_civilization_contract.py  test_civilization_governor.py  test_civilization_view.py  test_colony.py  test_colony_contract.py  test_colony_governor.py  test_colony_view.py  test_conservation.py  test_construction_a3.py  test_core.py  test_default_agents.py  test_dig_out.py  test_economy_a2.py  test_economy_a4.py  test_engine.py  test_food.py  test_health.py  test_integration_i1.py  test_llm.py  test_llm_governor.py  test_money_loop.py  test_movement.py  test_package_runtime.py  test_persistence.py  test_production_target.py  test_research_spine.py  test_sourcing.py  test_step2_hunger_mood.py  (+12 more)
(+41 files in other folders)
