[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent-town"
version = "0.1.0"
description = "Local desktop LLM-governed colony simulation prototype"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6,<3",
]

[project.scripts]
agent-town = "agent_town.colony_view:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_town = ["assets/colony/*", "assets/kenney/*"]
